# pyprop

./: LICENSE  README.md  makefile  pyproject.toml
src/pyprop/: basicGenerators.py  testing.py
src/pyprop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyproptest/: basicGenerators.py  testing.py
src/pyproptest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: basicTests.py  runTests.py
