[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproptest"
version = "0.0.1"
authors = [
    { name="Max Whisson", email="whissonm9@gmail.com"},
]
description = "pyproptest package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = []